fix: add some values

--- a/src/styles/style.module.scss
+++ b/src/styles/style.module.scss
@@ -4,6 +4,7 @@
 // styles for components write in components style.module.scss
 
 @import "~normalize.css/normalize.css";
+@import "./fonts.scss";
 @import "./variables.scss";
 
 body {
