--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,5 +2,10 @@
 
 $color-green: rgb(147, 219, 200);
 
+$main-font: Montserrat;
 
 // global css variables
+
+:root {
+  --main-alarm-color: red;
+}
