--- a/src/styles/style.module.scss
+++ b/src/styles/style.module.scss
@@ -3,9 +3,9 @@
 
 // styles for components write in components style.module.scss
 
-@import "~normalize.css/normalize.css";
-@import "./fonts.scss";
-@import "./variables.scss";
+@import '~normalize.css/normalize.css';
+@import './fonts.scss';
+@import './variables.scss';
 
 body {
   background-color: $color-green;
