fix: container style

--- a/src/components/ui/container/style.module.scss
+++ b/src/components/ui/container/style.module.scss
@@ -5,6 +5,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  box-sizing: border-box;
+  border: 1px solid red; //debuging rule
 }
 
 @media screen and (min-width: 1024px) {
