fix: change style button

--- a/src/components/ui/button/style.module.scss
+++ b/src/components/ui/button/style.module.scss
@@ -5,11 +5,11 @@
   align-items: center;
   background-color: var(--color-orange-main);
   color: var(--color-white);
-  font-size: 1.75rem;
   font-weight: 300;
   line-height: 71%;
-  padding: 1rem 2.75rem;
   border-radius: 0.5rem;
+  font-size: 1.25rem;
+  padding: 0.75rem 1.75rem;
   border: none;
   cursor: pointer;
 
@@ -28,25 +28,25 @@
   }
 
   .icon {
-    height: 1.5rem;
-    margin-right: 0.625rem;
-  }
-
-  &:has(> .icon) {
-    padding: 0.872rem 2rem;
-  }
-}
-.small {
-  font-size: 1.25rem;
-  padding: 0.75rem 1.75rem;
-
-  .icon {
     height: 1.25rem;
     margin-right: 0.5rem;
   }
 
   &:has(> .icon) {
     padding: 0.57rem 2rem;
+  }
+}
+.big {
+  font-size: 1.75rem;
+  padding: 1rem 2.75rem;
+
+  .icon {
+    height: 1.5rem;
+    margin-right: 0.625rem;
+  }
+
+  &:has(> .icon) {
+    padding: 0.872rem 2rem;
   }
 }
 .category {
