--- a/src/components/ui/button/style.module.scss
+++ b/src/components/ui/button/style.module.scss
@@ -11,6 +11,7 @@
   font-size: 1.25rem;
   padding: 0.75rem 1.75rem;
   border: none;
+  transition: background-color var(--transition-time);
   cursor: pointer;
 
   &:disabled {
