--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@ $main-font: Montserrat;
 
 :root {
   --font-main: 'Poppins', sans-serif;
+
   --main-alarm-color: red;
   --color-white: #fefefe;
   --color-black: #1b1b26;
@@ -21,4 +22,6 @@ $main-font: Montserrat;
   --color-grey: #bdbdbd;
   --color-grey-light: #e0e0e0;
   --color-grey-extra-light: #f8f8f8;
+
+  --transition-time: 0.4s ease-in-out;
 }
