--- a/src/components/ui/checkbox/style.module.scss
+++ b/src/components/ui/checkbox/style.module.scss
@@ -8,19 +8,19 @@
 }
 
 .checkbox-label {
-  color: #1b1b26;
-  padding-left: 40px;
+  color: var(--color-black);
+  padding-left: 2.5rem;
 
   cursor: pointer;
 
   &::before {
     content: '';
     display: block;
-    width: 24px;
-    height: 24px;
-    border: 0.5px solid #bdbdbd;
-    border-radius: 4px;
-    background-color: #f2f2f2;
+    width: 1.5rem;
+    height: 1.5rem;
+    border: 0.5px solid var(--color-grey);
+    border-radius: 0.25rem;
+    background-color: var(--color-grey-extra-light);
 
     position: absolute;
     top: 0;
@@ -31,22 +31,22 @@
   &::after {
     content: '';
     display: block;
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
     background: url('@Assets/icons/check.svg');
     background-repeat: no-repeat;
-    background-size: 20px 18px;
+    background-size: 1.25rem 1.125rem;
     opacity: 0;
 
     position: absolute;
-    top: 4px;
-    left: 2px;
+    top: 0.25rem;
+    left: 0.125rem;
     z-index: 3;
   }
 }
 
 .checkbox-input:checked + .checkbox-label::before {
-  border: 0.5px solid #98b9f0;
+  border: 0.5px solid var(--color-blue);
 }
 
 .checkbox-input:checked + .checkbox-label::after {
