--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -2,12 +2,12 @@
 
 .header {
   background-color: var(--color-black);
-  padding: 8px 36px;
+  padding: 0.5rem 2.25rem;
 }
 
 .logo-icon {
-  width: 342px;
-  height: 79px;
+  width: 21.375rem;
+  height: 4.937rem;
 }
 
 .logo-navigation-wrapper {
@@ -34,11 +34,11 @@
   &::before {
     content: '';
     display: block;
-    width: 6px;
-    height: 6px;
+    width: 0.375rem;
+    height: 0.375rem;
     border-radius: 1px;
     position: absolute;
-    top: 5.5px;
+    top: 0.344rem;
     left: 0;
     background-color: var(--color-white);
     transform: rotate(45deg);
