fix: hidden-example page

--- a/src/pages/hidden-example/style.module.scss
+++ b/src/pages/hidden-example/style.module.scss
@@ -46,3 +46,10 @@
   width: 300px;
   height: 300px;
 }
+
+.elements {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  align-items: center;
+}
