feat: add logic for accordion

--- a/src/pages/hidden-example/style.module.scss
+++ b/src/pages/hidden-example/style.module.scss
@@ -53,3 +53,11 @@
   flex-wrap: wrap;
   align-items: center;
 }
+
+.columFlex {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  flex-direction: column;
+}
