feat: align checkbox label

--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -93,6 +93,7 @@
   position: relative;
   padding-left: 1rem;
   cursor: pointer;
+  transition: color var(--transition-time);
 
   &::before {
     content: '';
