--- a/src/components/ui/checkbox/style.module.scss
+++ b/src/components/ui/checkbox/style.module.scss
@@ -1,5 +1,6 @@
 .checkbox-wrapper {
   position: relative;
+  margin-top: 1rem;
 }
 
 .checkbox-input {
@@ -9,7 +10,7 @@
 
 .checkbox-label {
   color: var(--color-black);
-  padding-left: 2.5rem;
+  padding-left: 2.6rem;
 
   cursor: pointer;
 
@@ -23,7 +24,7 @@
     background-color: var(--color-grey-extra-light);
 
     position: absolute;
-    top: 0;
+    top: -0.25rem;
     left: 0;
     z-index: 2;
   }
@@ -39,7 +40,7 @@
     opacity: 0;
 
     position: absolute;
-    top: 0.25rem;
+    top: 0.1rem;
     left: 0.125rem;
     z-index: 3;
   }
