--- a/src/components/ui/checkbox/style.module.scss
+++ b/src/components/ui/checkbox/style.module.scss
@@ -1,5 +1,9 @@
+@import '@Src/styles/variables.scss';
+
 .checkbox-wrapper {
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .checkbox-input {
@@ -8,22 +12,24 @@
 }
 
 .checkbox-label {
-  color: #1b1b26;
-  padding-left: 40px;
-
+  color: var(--color-black);
+  padding-left: 2.5rem;
+  min-height: 24px;
+  display: flex;
+  align-items: center;
   cursor: pointer;
 
   &::before {
     content: '';
     display: block;
-    width: 24px;
-    height: 24px;
-    border: 0.5px solid #bdbdbd;
+    width: calc(1.5rem - 2px);
+    height: calc(1.5rem - 2px);
+    border: 0.5px solid var(--color-grey);
     border-radius: 4px;
-    background-color: #f2f2f2;
-
+    background-color: #fafafa;
     position: absolute;
-    top: 0;
+    top: 50%;
+    transform: translateY(-50%);
     left: 0;
     z-index: 2;
   }
@@ -31,22 +37,20 @@
   &::after {
     content: '';
     display: block;
-    width: 24px;
-    height: 24px;
-    background: url('@Assets/icons/check.svg');
-    background-repeat: no-repeat;
-    background-size: 20px 18px;
+    width: 1.5rem;
+    height: 1.5rem;
+    background: url('@Assets/icons/check.svg') no-repeat center;
     opacity: 0;
-
     position: absolute;
-    top: 4px;
-    left: 2px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
     z-index: 3;
   }
 }
 
 .checkbox-input:checked + .checkbox-label::before {
-  border: 0.5px solid #98b9f0;
+  border: 0.5px solid var(--color-blue);
 }
 
 .checkbox-input:checked + .checkbox-label::after {
