--- a/src/components/ui/accordion/style.module.scss
+++ b/src/components/ui/accordion/style.module.scss
@@ -5,7 +5,6 @@
 }
 .container {
   display: block;
-  overflow: hidden;
   border: none;
   transition: all var(--transition-time);
 }
@@ -18,6 +17,12 @@
 }
 .title {
   display: block;
+}
+.open .container {
+  overflow: auto;
+}
+.closed .container {
+  overflow: hidden;
 }
 .open .header {
   background: url('../../../assets/icons/arrow-top.svg') no-repeat right 1rem center;
