Feat/implement accordion component (#91)
* feat: add logic for accordion

* fix: change accordion logic for smooth opening

* feat: add styles for accordion

* fix: change styles for checkbox

* fix: added the ability to scroll content with a smaller container height

--- a/src/components/ui/checkbox/style.module.scss
+++ b/src/components/ui/checkbox/style.module.scss
@@ -1,6 +1,9 @@
+@import '@Src/styles/variables.scss';
+
 .checkbox-wrapper {
   position: relative;
-  margin-top: 1rem;
+  display: flex;
+  align-items: center;
 }
 
 .checkbox-input {
@@ -10,21 +13,23 @@
 
 .checkbox-label {
   color: var(--color-black);
-  padding-left: 2.6rem;
-
+  padding-left: 2.5rem;
+  min-height: 24px;
+  display: flex;
+  align-items: center;
   cursor: pointer;
 
   &::before {
     content: '';
     display: block;
-    width: 1.5rem;
-    height: 1.5rem;
+    width: calc(1.5rem - 2px);
+    height: calc(1.5rem - 2px);
     border: 0.5px solid var(--color-grey);
-    border-radius: 0.25rem;
-    background-color: var(--color-grey-extra-light);
-
+    border-radius: 4px;
+    background-color: #fafafa;
     position: absolute;
-    top: -0.25rem;
+    top: 50%;
+    transform: translateY(-50%);
     left: 0;
     z-index: 2;
   }
@@ -34,14 +39,12 @@
     display: block;
     width: 1.5rem;
     height: 1.5rem;
-    background: url('@Assets/icons/check.svg');
-    background-repeat: no-repeat;
-    background-size: 1.25rem 1.125rem;
+    background: url('@Assets/icons/check.svg') no-repeat center;
     opacity: 0;
-
     position: absolute;
-    top: 0.1rem;
-    left: 0.125rem;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
     z-index: 3;
   }
 }
