--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -3,6 +3,7 @@
 .header {
   background-color: var(--color-black);
   padding: 0.5rem 2.25rem;
+  font-weight: 300;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -74,6 +75,9 @@
   color: var(--color-white);
   list-style-type: none;
 }
+.mobile-menu {
+  border: none;
+}
 
 @media (max-width: 1170px) {
   .navigation-list {
@@ -89,7 +93,10 @@
   }
 }
 
-.navigation-list li {
+.navigation-list li a {
+  display: block;
+  color: inherit;
+  text-decoration: none;
   position: relative;
   padding-left: 1rem;
   cursor: pointer;
