feat: add background image

--- a/src/components/ui/wrapper/style.module.scss
+++ b/src/components/ui/wrapper/style.module.scss
@@ -1,3 +1,7 @@
 .wrapper {
-  background-color: aqua;
+  // background-color: aqua;
+  background: url('../../../assets/img/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
