feat: add method for form rendering

--- a/src/components/common/form-page/style.module.scss
+++ b/src/components/common/form-page/style.module.scss
@@ -15,7 +15,7 @@
   border: 0.25rem solid var(--color-black);
   padding: 1rem 3rem 2rem;
   width: 22.5rem;
-  height: 37.19rem;
+  // height: 37.19rem;
 }
 
 .error-component {
