fix: replace the Container with a BaseElement

--- a/src/components/ui/accordion/style.module.scss
+++ b/src/components/ui/accordion/style.module.scss
@@ -3,16 +3,19 @@
 .accordion {
   display: block;
 }
+
 .container {
   display: block;
   border: none;
   overflow: hidden;
   transition: all var(--transition-time);
 }
+
 .wrapper {
   display: block;
   border: none;
 }
+
 .header {
   display: block;
   font-size: 1.125rem;
@@ -20,12 +23,15 @@
   padding: 0.75rem 0;
   cursor: pointer;
 }
+
 .title {
   display: block;
 }
+
 .open .header {
-  background: url('../../../assets/icons/arrow-top.svg') no-repeat right 1rem center;
+  background: url('/src/assets/icons/arrow-top.svg') no-repeat right 1rem center;
 }
+
 .closed .header {
-  background: url('../../../assets/icons/arrow-down.svg') no-repeat right 1rem center;
+  background: url('/src/assets/icons/arrow-down.svg') no-repeat right 1rem center;
 }
