--- a/src/components/ui/accordion/style.module.scss
+++ b/src/components/ui/accordion/style.module.scss
@@ -3,11 +3,19 @@
 .accordion {
   display: block;
 }
+
 .container {
   display: block;
   border: none;
+  overflow: hidden;
   transition: all var(--transition-time);
 }
+
+.wrapper {
+  display: block;
+  border: none;
+}
+
 .header {
   display: block;
   font-size: 1.125rem;
@@ -15,18 +23,15 @@
   padding: 0.75rem 0;
   cursor: pointer;
 }
+
 .title {
   display: block;
 }
-.open .container {
-  overflow: auto;
-}
-.closed .container {
-  overflow: hidden;
-}
+
 .open .header {
-  background: url('../../../assets/icons/arrow-top.svg') no-repeat right 1rem center;
+  background: url('/src/assets/icons/arrow-top.svg') no-repeat right 1rem center;
 }
+
 .closed .header {
-  background: url('../../../assets/icons/arrow-down.svg') no-repeat right 1rem center;
+  background: url('/src/assets/icons/arrow-down.svg') no-repeat right 1rem center;
 }
