--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -92,12 +92,13 @@
   }
 }
 
-.navigation-list li a {
+.nav-link {
   display: block;
   color: inherit;
   text-decoration: none;
   position: relative;
   padding-left: 1rem;
+  padding-bottom: 0;
   cursor: pointer;
   transition: color var(--transition-time);
 
