--- a/src/components/common/form-page/style.module.scss
+++ b/src/components/common/form-page/style.module.scss
@@ -5,3 +5,34 @@
   align-items: center;
   justify-content: center;
 }
+
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  background-color: #fff;
+  border-radius: 1.5rem;
+  border: 0.25rem solid var(--color-black);
+  padding: 1rem 3rem 2rem;
+  width: 22.5rem;
+}
+
+@media (max-width: 480px) {
+  .modal-container {
+    width: calc(100% - 6rem);
+  }
+}
+
+.error-component {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  color: var(--color-red-main);
+  line-height: 112%;
+}
+
+.error-icon {
+  width: 1.458rem;
+  height: 1.458rem;
+  margin: 0.313rem;
+}
