--- a/src/components/ui/wrapper/style.module.scss
+++ b/src/components/ui/wrapper/style.module.scss
@@ -1,3 +1,6 @@
 .wrapper {
-  background-color: aqua;
+  background: url('@Assets/img/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
