--- a/src/components/common/form-page/style.module.scss
+++ b/src/components/common/form-page/style.module.scss
@@ -12,7 +12,7 @@
   gap: 3rem;
   background-color: #fff;
   border-radius: 1.5rem;
-  border: 0.25rem solid var(--color-black);
+  border: 0.375rem solid var(--color-black);
   padding: 1rem 3rem 2rem;
   width: 22.5rem;
 }
@@ -35,4 +35,14 @@
   width: 1.458rem;
   height: 1.458rem;
   margin: 0.313rem;
+}
+
+.logo-link {
+  margin: auto;
+  display: block;
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
