--- a/src/components/ui/button/style.module.scss
+++ b/src/components/ui/button/style.module.scss
@@ -3,6 +3,7 @@
 @mixin button {
   display: flex;
   align-items: center;
+  justify-content: center;
   color: var(--color-white);
   border-radius: 0.5rem;
   border: none;
@@ -46,6 +47,7 @@
   background-color: var(--color-orange-main);
   font-size: 1.75rem;
   padding: 1rem 2.75rem;
+  line-height: 71%;
 
   .icon {
     height: 1.5rem;
