--- a/src/components/ui/input-text/style.module.scss
+++ b/src/components/ui/input-text/style.module.scss
@@ -4,11 +4,13 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 100%;
 }
 
 .inputRow {
   display: flex;
   position: relative;
+  width: 100%;
 
   .invalid {
     .input {
@@ -30,6 +32,7 @@
   border: solid 1px var(--color-grey);
   border-radius: 0.5rem;
   padding: 0.75rem;
+  width: 100%;
   font-size: 1rem;
   line-height: 1.25rem;
   transition: all var(--transition-time);
