--- a/src/pages/login/style.module.scss
+++ b/src/pages/login/style.module.scss
@@ -2,9 +2,24 @@
 }
 
 .login-form {
-  background-color: blue;
 }
 
 .login-button {
-  background: red;
+  max-width: 293px;
+  width: 100%;
+  margin-top: 1.5rem;
+}
+
+.signup-prompt-wrapper {
+  text-align: center;
+  font-weight: 300;
+  font-size: 0.9rem;
+  color: var(--color-grey-dark);
+
+  .signup-link {
+    text-decoration: underline;
+    color: #000000;
+    font-weight: 500;
+    font-size: 1rem;
+  }
 }
