--- a/src/components/ui/input-text/style.module.scss
+++ b/src/components/ui/input-text/style.module.scss
@@ -88,10 +88,10 @@
   display: none;
 }
 .toggle-visibility {
-  width: 60px;
-  height: 50px;
+  width: 2.75rem;
+  height: 2.75rem;
   cursor: pointer;
   background: url('/src/assets/icons/password-visibility.svg') no-repeat center;
   position: absolute;
-  right: 0;
+  right: 0.41rem;
 }
