44-rss-ecomm-2_01-login form client side validation (#101)
* feat: add styles to login page

* feat: add email validation

* feat: add password validation

* feat: add toggle password functionality

* refactor: improve password validation function

* refactor: improve icons styles

* refactor: move methods and rename variables

* refactor: move method into form page

* refactor: remove unnecessary code

* feat: add extra argument to method

---------

Co-authored-by: vadim-mg <76084755+vadim-mg@users.noreply.github.com>

--- a/src/components/common/form-page/style.module.scss
+++ b/src/components/common/form-page/style.module.scss
@@ -12,7 +12,7 @@
   gap: 3rem;
   background-color: #fff;
   border-radius: 1.5rem;
-  border: 0.25rem solid var(--color-black);
+  border: 0.375rem solid var(--color-black);
   padding: 1rem 3rem 2rem;
   width: 22.5rem;
 }
@@ -35,4 +35,28 @@
   width: 1.458rem;
   height: 1.458rem;
   margin: 0.313rem;
+}
+
+.logo-link {
+  margin: auto;
+  display: block;
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+.signup-prompt-wrapper {
+  text-align: center;
+  font-weight: 300;
+  font-size: 0.9rem;
+  color: var(--color-grey-dark);
+
+  .signup-link {
+    text-decoration: underline;
+    color: #000000;
+    font-weight: 500;
+    font-size: 1rem;
+  }
 }
