--- a/src/pages/login/style.module.scss
+++ b/src/pages/login/style.module.scss
@@ -2,9 +2,10 @@
 }
 
 .login-form {
-  background-color: blue;
 }
 
 .login-button {
-  background: red;
+  max-width: 293px;
+  width: 100%;
+  margin-top: 1.5rem;
 }
