--- a/src/components/common/form-page/style.module.scss
+++ b/src/components/common/form-page/style.module.scss
@@ -1,6 +1,7 @@
 .form-page {
   padding: 1rem;
   height: calc(100dvh - 2rem);
+  width: calc(100% - 2rem);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -41,7 +42,7 @@
   margin: auto;
   display: block;
 
-  img {
+  .logo-img {
     max-width: 100%;
     height: auto;
   }
