feat: add all field for forms and styles

--- a/src/pages/signup/style.module.scss
+++ b/src/pages/signup/style.module.scss
@@ -1,2 +1,37 @@
+@import '@Src/styles/variables.scss';
 .registration {
+}
+
+.form{}
+
+.formTitle{
+  width: 100%;
+  text-align: left;
+  font-size: 1.125rem;
+  color: var(--color-grey-dark);
+  &::before{
+    content:'Registration: ';
+    color: var(--color-black);
+  }
+}
+
+.button-next{
+  margin-top:1rem;
+}
+.address-input{
+  margin-bottom: 1rem;
+}
+.accordion{
+  div > input {
+    margin-bottom: 1rem;
+  }
+  .checkbox-accordion{
+    margin-top:2rem;
+    margin-bottom:0.25rem
+  }
+}
+.password-info{
+  font-size: 0.75rem;
+  line-height: 1.125rem;
+  color: var(--color-grey-dark);
 }
