--- a/src/pages/signup/style.module.scss
+++ b/src/pages/signup/style.module.scss
@@ -2,35 +2,36 @@
 .registration {
 }
 
-.form{}
+.form {
+}
 
-.formTitle{
+.formTitle {
   width: 100%;
   text-align: left;
   font-size: 1.125rem;
   color: var(--color-grey-dark);
-  &::before{
-    content:'Registration: ';
+  &::before {
+    content: 'Registration: ';
     color: var(--color-black);
   }
 }
 
-.button-next{
-  margin-top:1rem;
+.button-next {
+  margin-top: 1rem;
 }
-.address-input{
+.address-input {
   margin-bottom: 1rem;
 }
-.accordion{
+.accordion {
   div > input {
     margin-bottom: 1rem;
   }
-  .checkbox-accordion{
-    margin-top:2rem;
-    margin-bottom:0.25rem
+  .checkbox-accordion {
+    margin-top: 2rem;
+    margin-bottom: 0.25rem;
   }
 }
-.password-info{
+.password-info {
   font-size: 0.75rem;
   line-height: 1.125rem;
   color: var(--color-grey-dark);
