feat: add validate for all field

--- a/src/pages/signup/style.module.scss
+++ b/src/pages/signup/style.module.scss
@@ -27,8 +27,8 @@
     margin-bottom: 1rem;
   }
   .checkbox-accordion {
-    margin-top: 2rem;
-    margin-bottom: 0.25rem;
+    margin-top: 2rem 0;
+    margin-bottom: 2rem;
   }
 }
 .password-info {
