--- a/src/components/ui/banner/style.module.scss
+++ b/src/components/ui/banner/style.module.scss
@@ -1,3 +1,5 @@
+@import '@Src/styles/variables.scss';
+
 .banner {
   max-width: 100%;
   height: 43.875rem;
@@ -8,29 +10,73 @@
 
   margin: 1.5rem;
   border-radius: 2rem;
+
+  color: var(--color-white);
+  font-weight: 400;
+  font-size: 1.5rem;
 }
 
 .banner-content-wrapper {
   display: flex;
   gap: 6.94rem;
+  height: 100%;
 }
 
 .main-banner-section {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
   gap: 4rem;
+  width: 43.5%;
+  padding-top: 5.5rem;
+  padding-left: 4rem;
 }
 
 .banner-title {
+  font-weight: 700;
+  font-size: 64px;
+  margin: 0;
 }
 
 .banner-text-content {
+  font-family: var(--font-family);
+  line-height: 175%;
+  margin: 0;
+  width: 75%;
 }
 
 .highlight-badge-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.highlightBadge {
+.highlight-badge {
+  font-weight: 700;
+  font-size: 7rem;
+  line-height: 114%;
+  text-shadow: 0 8px 8px rgba(0, 0, 0, 0.25);
+}
+
+.highlight {
+  font-weight: 700;
+}
+
+.banner-button {
+  padding: 24px 32px;
+  line-height: 175%;
+  border-radius: 16px;
+}
+
+.small-btn-text {
+  font-weight: 400;
+  font-size: 1.5rem;
+}
+
+.big-btn-text {
+    font-weight: 600;
+    font-size: 32px;
+    letter-spacing: 0.12em;
+    margin-left: 6px;
 }
