fix: change styles for registration page

--- a/src/pages/signup/style.module.scss
+++ b/src/pages/signup/style.module.scss
@@ -19,18 +19,24 @@
 .button-next {
   margin-top: 1rem;
 }
+
 .address-input {
   margin-bottom: 1rem;
 }
+
 .accordion {
-  div > input {
-    margin-bottom: 1rem;
+  label{
+    margin-top: 1.5rem;
   }
-  .checkbox-accordion {
-    margin-top: 2rem 0;
-    margin-bottom: 2rem;
+  .checkbox-accordion{
+    margin-top: 1.5rem;
+
+    label{
+      margin-top: 0;
+    }
   }
 }
+
 .password-info {
   font-size: 0.75rem;
   line-height: 1.125rem;
