--- a/src/components/common/form-page/style.module.scss
+++ b/src/components/common/form-page/style.module.scss
@@ -1,6 +1,6 @@
 .form-page {
   padding: 1rem;
-  height: calc(100dvh - 2rem);
+  min-height: calc(100dvh - 2rem);
   width: calc(100% - 2rem);
   display: flex;
   align-items: center;
