--- a/src/components/ui/accordion/style.module.scss
+++ b/src/components/ui/accordion/style.module.scss
@@ -9,7 +9,7 @@
   display: block;
   border: none;
   overflow: hidden;
-  transition: max-height 0.5s ease-in-out;
+  transition: max-height 0.6s;
   max-height: 0;
 }
 
