--- a/src/components/ui/banner/style.module.scss
+++ b/src/components/ui/banner/style.module.scss
@@ -5,7 +5,7 @@
   height: 43.875rem;
   background: url('@Assets/img/banner-bg.jpg');
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: left top;
   background-size: cover;
 
   margin: 1.5rem;
@@ -34,9 +34,10 @@
 
 .banner-title {
   font-weight: 700;
-  font-size: 64px;
+  font-size: 4rem;
   line-height: 120%;
   margin: 0;
+  text-shadow: 0 8px 8px rgba(0, 0, 0, 0.25);
 }
 
 .banner-text-content {
@@ -73,9 +74,9 @@
 }
 
 .banner-button {
-  padding: 24px 32px;
+  padding: 1.5rem 2rem;
   line-height: 175%;
-  border-radius: 16px;
+  border-radius: 1rem;
   align-items: baseline;
 }
 
@@ -86,15 +87,17 @@
 
 .big-btn-text {
   font-weight: 600;
-  font-size: 32px;
+  font-size: 2rem;
   letter-spacing: 0.12em;
-  margin-left: 6px;
+  margin-left: 0.375rem;
 }
 
 .highlight-badge-mobile {
   font-weight: 700;
-  font-size: 48px;
+  font-size: 3rem;
   margin: 0;
+
+  text-shadow: 0 8px 8px rgba(0, 0, 0, 0.25);
 
   display: none;
 }
@@ -123,7 +126,7 @@
     display: block;
   }
   .main-banner-section {
-    width: 100%;
+    width: 80%;
     padding: 3.5rem;
     gap: 2.5rem;
   }
@@ -135,8 +138,9 @@
 
 @media (max-width: 640px) {
   .main-banner-section {
-    padding: 53px 22px 38px;
+    padding: 3.313rem 1.375rem 2.375rem;
     gap: 2rem;
+    width: 100%;
   }
   .banner {
     margin: 1.5rem 0;
@@ -146,11 +150,11 @@
 @media (max-width: 530px) {
   .banner-button {
     flex-direction: column;
-    padding: 24px 64px;
+    padding: 1.5rem 4rem;
     line-height: 140%;
   }
   .title-second-part {
-    font-size: 40px;
+    font-size: 2.5rem;
     display: block;
   }
 }
