Feat/rss ecomm 2 09 registration form client side validation fields (#125)
* feat: add basic layout for registered form

* feat: add all field for forms and styles

* refactor: format

* feat: add validate for all field

* feat: added logic for saving delivery and billing address data in an object

* refactor: replace 'address' with 'street'

* fix: validate street

* fix: change validate is form full

* feat: add handler for checkbox 'Use the shipping address for billing purposes'

* fix: fix accordion component for correct display of chords in the registration form

* fix: change styles for registration page

* fix: validateDateOfBirth

* feat: add password validation and save value in data

* refactor: format

--- a/src/components/ui/accordion/style.module.scss
+++ b/src/components/ui/accordion/style.module.scss
@@ -2,13 +2,15 @@
 
 .accordion {
   display: block;
+  max-width: 100%;
 }
 
 .container {
   display: block;
   border: none;
   overflow: hidden;
-  transition: all var(--transition-time);
+  transition: max-height 0.6s;
+  max-height: 0;
 }
 
 .wrapper {
@@ -26,6 +28,14 @@
 
 .title {
   display: block;
+}
+
+.open .container {
+  max-height: 1000px;
+}
+
+.closed .container {
+  max-height: 0;
 }
 
 .open .header {
