feat: add styles to main page links

--- a/src/pages/main/style.module.scss
+++ b/src/pages/main/style.module.scss
@@ -1,3 +1,5 @@
+@import '@Src/styles/variables.scss';
+
 .main {
 }
 
@@ -7,4 +9,18 @@
 
 .is-logged-in {
   margin: 1rem 2rem;
+}
+
+.links-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.2rem;
+  padding: 2rem;
+
+  font-size: 1.1rem;
+
+  .list-item {
+    color: var(--color-black);
+  }
 }
