--- a/src/components/common/form-page/style.module.scss
+++ b/src/components/common/form-page/style.module.scss
@@ -10,7 +10,7 @@
 .modal-container {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 2rem;
   background-color: #fff;
   border-radius: 1.5rem;
   border: 0.375rem solid var(--color-black);
@@ -30,6 +30,9 @@
   gap: 0.75rem;
   color: var(--color-red-main);
   line-height: 112%;
+  &[hidden]{
+    display: none;
+  }
 }
 
 .error-icon {
@@ -45,6 +48,9 @@
   .logo-img {
     max-width: 100%;
     height: auto;
+    @media (max-height: 760px) {
+      height: 3rem;
+    }
   }
 }
 
@@ -53,6 +59,11 @@
   font-weight: 300;
   font-size: 0.9rem;
   color: var(--color-grey-dark);
+
+  p{
+    margin-bottom: 0.375rem;
+    margin-top: 0.37rem;
+  }
 
   .signup-link {
     text-decoration: underline;
