--- a/src/components/ui/select/style.module.scss
+++ b/src/components/ui/select/style.module.scss
@@ -51,9 +51,8 @@
   border-radius: 8px;
   width: 360px;
   max-width: calc(100vw - 4rem);
-  height: 44px;
-  padding: 0.75rem;
-
+  height: auto;
+  padding: 0.5rem 0.75rem 0.375rem;
   font-weight: 400;
   font-size: 16px;
   line-height: 125%;
