--- a/src/pages/signup/style.module.scss
+++ b/src/pages/signup/style.module.scss
@@ -17,23 +17,14 @@
 }
 
 .button-next {
-  margin-top: 1rem;
 }
 
-.address-input {
-  margin-bottom: 1rem;
-}
-
-.accordion {
-  label {
-    margin-top: 1.5rem;
-  }
-  .checkbox-accordion {
-    margin-top: 1.5rem;
-
-    label {
-      margin-top: 0;
-    }
+.accordion > div:nth-child(2) > div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  @media (max-height: 800px) {
+    gap: 0.5rem;
   }
 }
 
