--- a/src/pages/signup/style.module.scss
+++ b/src/pages/signup/style.module.scss
@@ -10,6 +10,7 @@
   text-align: left;
   font-size: 1.125rem;
   color: var(--color-grey-dark);
+  min-height: 2rem;
   &::before {
     content: 'Registration: ';
     color: var(--color-black);
