--- a/src/components/common/form-page/style.module.scss
+++ b/src/components/common/form-page/style.module.scss
@@ -15,7 +15,7 @@
   border-radius: 1.5rem;
   border: 0.375rem solid var(--color-black);
   padding: 1rem 3rem 2rem;
-  width: 22.5rem;
+  // min-width: 22.5rem;
 }
 
 @media (max-width: 480px) {
